@@ -13,6 +13,8 @@ import.on.demand     = "peak.config.ini_files.import_on_demand"
 component.factories  = "peak.config.ini_files.register_factory"
 named.services       = "peak.config.ini_files.add_services"
 load.on.demand       = "peak.config.ini_files.load_on_demand"
+xml.attributes.for.* = "peak.config.ini_files.define_xml_attributes"
+xml.elements.for.*   = "peak.config.ini_files.define_xml_elements"
 
 
 [peak.config.loaders]
@@ -25,8 +27,6 @@ load.on.demand       = "peak.config.ini_files.load_on_demand"
 file    = "peak.config.ini_files:loadConfigFile"
 files   = "peak.config.ini_files:loadConfigFiles"
 mapping = "peak.config.ini_files:loadMapping"
-
-
 
 
 
@@ -364,7 +364,6 @@ ldap	= cursfmts.cursorToLDIF
 
 [DCOracle2.sql_types]
 * = config.Namespace('peak.sql_types')
-
 
 
 
